# sss

./: .env.example  .gitignore  Dockerfile  Dockerfile.fetch  Dockerfile.server  README.md  config.py  main.py  pyproject.toml  railway.toml  run_text.py  server.py
.consent/: ledger.jsonl
ai/agents/: agent1.py  agent2.py  agent3.py  agent4.py  agent5.py  agent6.py  agent7.py  agent8.py  consent.py  deps.py  orchestrator.py
ai/prompts/: __init__.py  agentverse_agent.md  drive_agent.md  email_agent.md  gmail_agent.md  knowledge_base_agent.md  orchestrator.md
ai/session/: clock.py  deps_factory.py
ai/transport/: bridge.py  fetch_wrapper.py
backend/: approval.py  protocol.py  session.py  voice_pipeline.py
doc/: IMPLEMENTATION_PLAN.md  PHASE_1.md
docs/: multi-agent-system.md
docs/consent-architecture/: 01-consent-gate.md  02-fallback-matrix.md  03-observability-and-ledger.md  04-trust-tiers.md  README.md
docs/observability/: phoenix.md
frontend/: index.html
frontend/public/: audio-processor.js
frontend/src/: App.tsx  index.css
memory/: execution_log.py  graph.py
observability/: __init__.py  consent_trace.py  evaluator.py  kill_switch.py  phoenix.py  phoenix_config.py  spans.py
schemas/: agent1.py  consent.py  orchestrator.py
tests/: demo_agent.py
tests/consent/: conftest.py
tests/integration/: test_google_workspace.py
tests/observability/: conftest.py  test_consent_trace.py  test_evaluator.py  (+2 more)
tools/: __init__.py  calendar.py  communication.py  execution_lock.py  gmail.py  knowledge_base.py  ledger.py  sending_email.py  voice.py
(+21 files in other folders)
