[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "moneypenny"
version = "0.1.0"
description = "A command-line tool"
requires-python = ">=3.13"
license = "MIT"
authors = [
    { name = "KhoiNguyen", email = "khoiduong2913@gmail.com" },
]
dependencies = [
    "google-api-python-client>=2.192.0",
    "google-auth-httplib2>=0.3.0",
    "google-auth-oauthlib>=1.3.0",
    "logfire>=4.27.0",
    "openai>=2.26.0",
    "pveagle>=2.0.1",
    "pydantic-ai>=1.67.0",
    "pydantic-settings>=2.13.1",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.2",
    "sounddevice>=0.5.5",
    "sounddevice>=0.5.1",
    "numpy>=2.0.0",
    "websockets>=13.0",
    "httpx>=0.28.0",
    "openai>=1.75.0",
    "resend>=2.23.0",
    "resen>=2021.1.0",
    "watchfiles>=0.22.0",
    "fastapi[standard]>=0.135.2",
    "jose>=1.0.0",
    "datetime>=6.0",
    "asyncpg>=0.30.0",
    "passlib[bcrypt]",
    "sqlalchemy[asyncio]",
    "aiosqlite",
    "uvicorn",
    "email-validator",
    "python-jose[cryptography]>=3.5.0",
    "deepgram-sdk>=7.3.1",
    "redis>=8.0.0",
    "redisvl>=0.3.9",
    "uagents>=0.25.2",
]

[project.scripts]
moneypenny = "moneypenny:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "integration: live tests that hit real Google APIs (opt-in via RUN_GOOGLE_INTEGRATION=1)",
]

[tool.hatch.build.targets.wheel]
packages = ["src/moneypenny"]
